# otus_homework_01

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  log_analyzer.py  pyproject.toml  setup.cfg
configs/: config.yaml
reports/: report-2024.08.14.html
src/app/: process.py  utils.py
tests/: test_log_processor.py
